--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Basics"
         tools:targetApi="31">
+
         <activity
             android:name=".CalculatorActivity"
             android:parentActivityName=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Game2048Activity"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
